# system_forecast_do_an

./: .gitignore  README.md  THU.py  active-window.py  active_window_log.csv  docs.md  logging_script.py  main.py  metrics_log.csv  pyproject.toml  system_usage.csv  unified_log.csv  unified_logger.py  visualizeThu.py
docs/: project_overview.md
final_recording_script/: 10_comprehensive_activity_log.py  PROJECT_OVERVIEW.md  activity_model.joblib  change_label_to_idle.py  comprehensive_activity_log.csv  comprehensive_activity_log_old.csv  comprehensive_activity_log_with_Idle.csv  current_state.txt  final_docs.md  gemini_machine_learning.md  generate_visualizations.py  live_inference.py  project_documentation.md  prompt_for_visualization.md  state_switching_script.sh  train_model.py  watch_metrics.nu  window_title_visulization.py
final_recording_script/presentation/diatypst/: FINAL_DOCUMENTATION_ML.md  google_studio.typ  google_studio_vi.typ  main.typ  project_documentation.md
final_recording_script/system_only_model/: analyze_gpu_diff.py  train_model.py
final_recording_script/training/: activity_model.joblib  train_model.py
playground/: 1_visualize.py  active-window.py  active_window_log.csv  combined.py  fundemental.md  get_label.py  input_test_log.csv  keyboard_mouse_monitor_test.py  test.nu  unified_activity_log.csv  usage_logger.py
playground/cpu_predictor/: 2_cpu_ram_disk_net_streaming.py  4_train_predict_next_second.py  5_run_predict_next_second.py  cpu_predictor.pkl  cpu_ram_disk_net.csv  scaler.pkl  system_metrics.csv  training_doc.md
(+16 files in other folders)
